[package]
name = "lfchring"
version = "0.1.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.8"
hex-literal = "0.3"
rand = "0.8"
