[package]
name = "lfchring"
version = "0.1.2" # remember to update html_root_url
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
license = "Apache-2.0"
description = """
Concurrent, lock-free implementation of a consistent hashing ring data
structure, supporting virtual nodes and keeping track of replication.
"""
repository = "https://github.com/ckatsak/lfchring-rs"
readme = "README.md"
edition = "2018"
keywords = ["concurrent", "lock-free", "consistent-hash", "ring", "data-structure"]
categories = ["data-structures", "concurrency", "algorithms"]


[dependencies]
crossbeam-epoch = "~0.9.2" # >= 0.9.2, < 0.10.0  # remember to update rustdoc links
log = "0.4"
thiserror = "1.0"
blake2b_simd = { version = "~0.5.11", optional = true } # remember to update rustdoc links
blake3 = { version = "~0.3.7", optional = true } # remember to update rustdoc links

[dev-dependencies]
env_logger = "0.8"
hex-literal = "0.3"
rand = "0.8"

[features]
default = []
blake2b-hash = ["blake2b_simd"]
blake3-hash = ["blake3"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
